add add opens note